fix: adjust model for recent games